# rust-daily-learning

./: Cargo.toml  LICENSE
src/: database.rs  main.rs
