[package]
name = "vector-practice"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
tokio = { version = "1.46.1", features = ["full"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
serde = { version = "1.0.219", features = ["derive"] }
sqlx = { version = "0.8", features = [ "mysql", "runtime-tokio", "tls-native-tls" ] }

